# Vanguard

./: .gitignore  README.md
llvm-3.6.0.src/tools/clang/tools/huawei-checker/: CMakeLists.txt  config.json  main.cpp
llvm-3.6.0.src/tools/clang/tools/huawei-checker/BufferToStruct/: BufferToStruct.cpp  BufferToStruct.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/PreCheckDataSet/: PreCheckDataSet.cpp  PreCheckDataSet.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/framework/: ASTElement.cpp  ASTElement.h  ASTManager.cpp  ASTManager.h  ASTQueue.cpp  ASTQueue.h  BasicChecker.cpp  BasicChecker.h  CallGraph.cpp  CallGraph.h  Common.cpp  Common.h  Logger.cpp  Logger.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/taint-check/: FunctionEnv.cpp  FunctionEnv.h  TaintChecker.cpp  TaintChecker.h  TaintEnv.cpp  TaintEnv.h  TaintInterface.cpp  TaintInterface.h  TaintValue.cpp  TaintValue.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/taint-check-div/: DivChecker.cpp
llvm-3.6.0.src/tools/clang/tools/huawei-checker/taint-memory-op/: TaintedMemOPChecker.cpp  TaintedMemOPChecker.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/cpu2006/: Makefile  astList  ast_gen_run.sh  cpcontents.sh  cpmake.sh  mkdir.sh  update_ast_gen.sh
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/cpu2006/400.perlbench/: HiRes.c  Makefile  make.out  spec_config.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/cpu2006/401.bzip2/: ast_gen.sh  make.out
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/cpu2006/403.gcc/: ansidecl.h  make.out  system.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/cpu2006/410.bwaves/: make.out
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/cpu2006/416.gamess/: eigen.F  make.out
llvm-3.6.0.src/tools/clang/tools/huawei-checker/test/tainted/: AST generation.txt  DataFunction.txt  DataSet.txt  Label_Feature_Data.xml  MOLINT.TAINTED.MEM.OP.xml  Makefile  PredFunction.txt  PredicateData.txt  REFERABLE.REPAIR.MISSING.CHECK.xml  astList.txt  config.json  time.txt  winmips.bat
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/: CMakeLists.txt  config.json  main.cpp
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/BufferToStruct/: BufferToStruct.cpp  BufferToStruct.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/PreCheckDataSet/: PreCheckDataSet.cpp  PreCheckDataSet.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/arraybound/: ArrayOutOfBoundsCheckerV4.cpp
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/framework/: ASTElement.h  ASTManager.cpp  ASTQueue.h  BasicChecker.h  CallGraph.cpp  CallGraph.h  Logger.cpp
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/recursive-call/: Digraph.cpp  Digraph.h  ValueObject.cpp  ValueObject.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/taint-check/: FunctionEnv.h  TaintChecker.cpp  TaintChecker.h  TaintEnv.cpp  TaintEnv.h  TaintInterface.cpp  TaintInterface.h  TaintValue.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/taint-memory-op/: TaintedMemOPChecker.cpp  TaintedMemOPChecker.h
llvm-3.6.0.src/tools/clang/tools/huawei-checker2/test/tainted/: DataSet.txt  Label_Feature_Data.xml  MOLINT.TAINTED.MEM.OP.xml  PredicateData.txt  astList.txt  config.json  config.txt  output.txt  time.txt
missing-check/Vanguard/: CMakeLists.txt
missing-check/Vanguard/arraybound/: ArrayOutOfBoundsCheckerV4.cpp
missing-check/Vanguard/dangling-pointer/: DanglingPointer.cpp  DanglingPointer.h
missing-check/Vanguard/framework/: ASTManager.cpp  ASTManager.h  CallGraph.cpp  Common.cpp  Common.h
missing-check/Vanguard/recursive-call/: Bimap.h  ElementaryCyclesSearch.cpp  RecursiveCallChecker.cpp  RecursiveCallChecker.h  TarjanSCC.cpp  TarjanSCC.h  XmlWriter.cpp
missing-check/Vanguard/taint-check/: FunctionEnv.cpp  TaintChecker.cpp  TaintChecker.h  TaintEnv.cpp  TaintEnv.h  TaintInterface.cpp  TaintValue.cpp  TaintValue.h
missing-check/Vanguard/taint-check-div/: DivChecker.cpp
missing-check/Vanguard/taint-memory-op/: TaintedMemOPChecker.cpp
(+1514 files in other folders)
